# pd

./: Cargo.toml
editors/vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json
editors/vscode/src/: client.ts  commands.ts  config.ts  context.ts  extension.ts  lspext.ts
src/pd-base-db/: Cargo.toml
src/pd-base-db/src/: lib.rs
src/pd-codegen/: Cargo.toml
src/pd-codegen/src/: lib.rs
src/pd-db/: Cargo.toml
src/pd-db/src/: lib.rs
src/pd-ds/: Cargo.toml
src/pd-ds/src/: lib.rs  token_set.rs
src/pd-ide/: Cargo.toml
src/pd-ide/src/: lib.rs
src/pd-ide/src/tests/: mod.rs
src/pd-ir/: Cargo.toml
src/pd-ir/src/: ir.rs  lib.rs  lower.rs  macros.rs  resolve.rs  tests.rs
src/pd-ir/src/ir/: expr.rs  pat.rs  ty.rs
src/pd-ir/src/resolve/: collector.rs
src/pd-lex/: Cargo.toml
src/pd-lex/src/: lib.rs  tests.rs  text_range.rs
src/pd-ls/: Cargo.toml
src/pd-ls/src/: capabilities.rs  context.rs  dispatch.rs  lsp_ext.rs  main.rs  vfs.rs
src/pd-parse/: Cargo.toml
src/pd-parse/src/: db.rs  lib.rs  parse.rs  parser.rs  test.rs
src/pd-parse/src/parse/: expr.rs  item.rs  pat.rs  path.rs  tests.rs  ty.rs
src/pd-parse/src/parse/tests/: expr.rs  item.rs
src/pd-syntax/: Cargo.toml
src/pd-syntax/src/: ast.rs  lib.rs  macros.rs
src/pd-syntax/src/ast/: macros.rs  nodes.rs
src/pd-vfs/: Cargo.toml
src/pd-vfs/src/: lib.rs  vfs.rs
