[package]
name = "pd-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
indexvec = "0.5"
paste = "1"
salsa = "0.17.0-pre.2"
smol_str = "0.1.21"

[dependencies.pd-base-db]
path = "../pd-base-db"

[dependencies.pd-parse]
path = "../pd-parse"

[dependencies.pd-syntax]
path = "../pd-syntax"

[dependencies.pd-vfs]
path = "../pd-vfs"
