[package]
name = "pd-lex"
version = "0.1.0"
edition = "2021"

[dependencies]
drop_bomb = "0.1"

[dependencies.peekmore]
git = "ssh://git@github.com/andyyu2004/peekmore.git"
features = ["smallvec"]

[dependencies.rustc_lexer]
version = "727.0.0"
package = "rustc-ap-rustc_lexer"

[dependencies.pd-syntax]
path = "../pd-syntax"