[package]
name = "pd-ls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdls"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
indexmap = "1"
indexed_vec = "1"
lsp-server = "0.5"
lsp-types = "0.91"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.pd-ide]
path = "../pd-ide"
