[package]
name = "pd-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
expect-test = "1"
salsa = "0.17.0-pre.2"
rowan = "0.15.0"

[dependencies.pd-base-db]
path = "../pd-base-db/"

[dependencies.pd-ds]
path = "../pd-ds/"

[dependencies.pd-lex]
path = "../pd-lex/"

[dependencies.pd-syntax]
path = "../pd-syntax/"

[dependencies.pd-vfs]
path = "../pd-vfs/"